k8s/fusionauth/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fusionauth
  namespace: fusionauth
spec:
  replicas: 1
  selector:
   matchLabels:
     app: fusionauth
  template:
    metadata:
      labels:
        app: fusionauth
    spec:
      containers:
        - env:
            - name: POSTGRES_USER
              valueFrom:
                secretKeyRef:
                  name: fusionauth
                  key: DB_USER               
            - name: POSTGRES_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: fusionauth
                  key: DB_PASSWORD     
            - name: DATABASE_USER
              valueFrom:
                secretKeyRef:
                  name: fusionauth
                  key: DB_USER     
            - name: DATABASE_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: fusionauth
                  key: DB_PASSWORD            
            - name: DATABASE_ROOT_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: fusionauth
                  key: DB_PASSWORD              
            - name: DATABASE_ROOT_USER
              valueFrom:
                secretKeyRef:
                  name: fusionauth
                  key: DB_USER
            - name: DATABASE_URL
              value: jdbc:postgresql://fusionauth-cluster.postgres-cluster.svc.cluster.local:5432/fusionauth
            - name: FUSIONAUTH_MEMORY
              value: 256M
            - name: FUSIONAUTH_SEARCH_ENGINE_TYPE
              value: database
          image: fusionauth/fusionauth-app:latest
          name: fusionauth
          ports:
            - containerPort: 9011
          resources:
            requests:
              cpu: 1000m
              memory: 500Mi
            limits:
              cpu: 1000m
              memory: 500Mi
      restartPolicy: Always
