k8s/fusionauth/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: fusionauth
  namespace: fusionauth
spec:
  ports:
  - name: http
    port: 9011
  selector:
    app: fusionauth
