k8s/fusionauth/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: fusionauth
  namespace: fusionauth
  annotations:
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/session-cookie-expires: '172800'
    nginx.ingress.kubernetes.io/session-cookie-max-age: '172800'
    nginx.ingress.kubernetes.io/session-cookie-name: JSESSIONID
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx-external
spec:
  tls:
  - hosts:
    - fusionauth.stage.oci.11fs-structs.com
    secretName: fusionauth-11fs-structs-tls
  rules:
  - host: fusionauth.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: fusionauth
          servicePort: 9011
